DV-180 feat: evaluation api 요청, 응답 스키마 업데이트
