# app/models/openai/gpt.py
@@ -7,7 +7,7 @@ from openai import OpenAI
 
 import wandb
 from app.core.config import Config
-from app.schemas.evaluation import EvaluationRequest, PersonalEvaluationResponse, TechnicalEvaluationResponse
+from app.schemas.evaluation import EvaluationRequest, EvaluationResponse
 from app.schemas.question import QuestionsRequest, QuestionsResponse
 
 client_gpt = OpenAI(api_key=Config.OPENAI_API_KEY)
@@ -24,7 +24,7 @@ class ContentGenerator(weave.Model):
     @weave.op(call_display_name=lambda call: f"{call.func_name}__{datetime.now()}")
     def invoke(
         self, prompt: str, input: str, type: Literal["question", "evaluation"]
-    ) -> Union[QuestionsResponse, TechnicalEvaluationResponse, PersonalEvaluationResponse]:
+    ) -> Union[QuestionsResponse, EvaluationResponse]:
         response = client_gpt.chat.completions.create(
             model=Config.GPT_MODEL,
             messages=[
@@ -44,12 +44,4 @@ class ContentGenerator(weave.Model):
             weave.publish(weave.Dataset(name="dataset", rows=[{"cover_letter": input}]))
             return QuestionsResponse(**parsed_content)
         elif type == "evaluation":
-            if isinstance(self.user_data, EvaluationRequest):
-                if self.user_data.interview_type == "technical":
-                    return TechnicalEvaluationResponse(**parsed_content)
-                elif self.user_data.interview_type == "personal":
-                    return PersonalEvaluationResponse(**parsed_content)
-                else:
-                    raise ValueError(f"Invalid interview_type: {self.user_data.interview_type}")
-            else:
-                raise ValueError("user_data must be of type EvaluationRequest for evaluation.")
+            return EvaluationResponse(**parsed_content)
