# app/routers/interview.py
@@ -3,9 +3,9 @@ from typing import Union
 from fastapi import APIRouter, Depends, HTTPException
 
 from app.schemas.answer import AnswerRequest, AnswerResponse
-from app.schemas.evaluation import EvaluationRequest, PersonalEvaluationResponse, TechnicalEvaluationResponse
+from app.schemas.evaluation import EvaluationRequest, EvaluationResponse
 from app.schemas.question import QuestionsRequest, QuestionsResponse
-from app.services.interview_service import generate_interview_evaluation, process_answer, process_questions
+from app.services.interview_service import process_answer, process_evaluation, process_questions
 from app.services.s3_service import S3Service, get_s3_service
 from app.services.stt_service import STTService, get_stt_service
 from app.services.tts_service import TTSService, get_tts_service
@@ -30,14 +30,11 @@ async def create_interview_questions(
 @router.post(
     "/{interview_id}/evaluation",
     tags=["Interview"],
-    response_model=Union[
-        TechnicalEvaluationResponse,
-        PersonalEvaluationResponse,
-    ],
+    response_model=EvaluationResponse,
 )
 async def create_interview_evaluation(interview_id: Union[int, str], request_data: EvaluationRequest):
     try:
-        evaluation = generate_interview_evaluation(request_data)
+        evaluation = process_evaluation(interview_id, request_data)
         return evaluation
     except Exception as e:
         raise HTTPException(status_code=500, detail=f"Error generating evaluation: {str(e)}")
@@ -51,14 +48,7 @@ async def create_interview_questions_test():
         raise HTTPException(status_code=500, detail=f"Error generating questions: {str(e)}")
 
 
-@router.post(
-    "/{interview_id}/evaluation-test",
-    tags=["Interview"],
-    response_model=Union[
-        TechnicalEvaluationResponse,
-        PersonalEvaluationResponse,
-    ],
-)
+@router.post("/{interview_id}/evaluation-test", tags=["Interview"], response_model=EvaluationResponse)
 async def create_interview_evaluation_test():
     try:
         return evaluation_test_data
