# app/schemas/answer.py
@@ -3,23 +3,23 @@ from typing import Literal, Optional, Union
 from pydantic import BaseModel
 
 
-class ScoreDetails(BaseModel):
+class ScoreDetail(BaseModel):
     score: int
     rationale: str
 
 
 class TextScores(BaseModel):
-    appropriate_response: ScoreDetails
-    logical_flow: ScoreDetails
-    key_terms: ScoreDetails
-    consistency: ScoreDetails
-    grammatical_errors: ScoreDetails
+    appropriate_response: ScoreDetail
+    logical_flow: ScoreDetail
+    key_terms: ScoreDetail
+    consistency: ScoreDetail
+    grammatical_errors: ScoreDetail
 
 
 class VoiceScores(BaseModel):
-    wpm: ScoreDetails
-    stutter: ScoreDetails
-    pronunciation: ScoreDetails
+    wpm: ScoreDetail
+    stutter: ScoreDetail
+    pronunciation: ScoreDetail
 
 
 class Scores(BaseModel):
